[integration]: [pr2]: feat: add timestamps to currencies
